--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,19 @@
 log:
-  level: info                     
-
+  level: info
 pipeline:
   authenticators:
-    - id: anonymous_authenticator 
+    - id: anonymous_authenticator
       type: anonymous
   authorizers:
-    - id: deny_all_requests       
+    - id: deny_all_requests
       type: deny
-    - id: allow_all_requests      
+    - id: allow_all_requests
       type: allow
   mutators:
-    - id: create_jwt              
+    - id: create_jwt
       type: jwt
-
 rules:
-  default:                        
+  default:
     methods:
       - GET
       - POST
@@ -23,8 +21,7 @@ rules:
       - authenticator: anonymous_authenticator
       - authorizer: deny_all_requests
       - mutator: create_jwt
-
   providers:
-    file:                         
-      src: /heimdall/rule/rule.yaml
+    file:
+      src: /rule/rule.yaml
       watch: true
